[package]
name = "tureng-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
miniserde = "0.1"
termion = "3"
reqwest = "0.12.4"
tokio = { version = "1.37.0", features = ["full"] }
futures-concurrency = "7.6.0"
futures-lite = "2.3.0"

[profile.release-pr]
inherits = "release"
lto = true
panic = "abort"
codegen-units = 1
strip = true
opt-level = 3
