[package]
name = "tureng-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = [
	"gzip",
	"native-tls",
], default-features = false }
miniserde = "0.1"
tokio = { version = "1", features = ["rt", "macros"], default-features = false }
crossterm = { version = "0.28", features = [
	"event-stream",
], default-features = false }
futures-util = { version = "0.3", default-features = false }

[profile.release-pr]
inherits = "release"
lto = true
panic = "abort"
codegen-units = 1
strip = true
